updating routes. Added puts to update army
