# routes/units.js
@@ -5,5 +5,9 @@ const path = require('../controlers/units');
 router.get('/', path.getAll);
 router.get('/:id', path.getSearch);
 router.post('/', path.postNew);
+router.put('/:id', path.getAll)
+router.put('/xp/:id', path.getAll)
+router.delete('/:id', path.getAll)
+
 
 module.exports = router;
